--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ params:
   defaultTheme: light # dark, light
   disableThemeToggle: true
   ShowReadingTime: false
-  ShowShareButtons: true
+  ShowShareButtons: false
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: false
